# phaseField

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: clangtidy.yml  github-pages.yml
applications/BinaryConvection/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/CHAC_anisotropy/: customPDE.h  equations.cc  postprocess.cc
applications/CHAC_anisotropyRegularized/: customPDE.h  equations.cc  postprocess.cc
applications/CHAC_performance_test/: equations.cc  postprocess.cc
applications/CHiMaD_5a/: custom_pde.h  main.cc  parameters.prm
applications/CHiMaD_benchmark1a/: customPDE.h  equations.cc  postprocess.cc
applications/CHiMaD_benchmark2a/: customPDE.h  equations.cc  postprocess.cc
applications/CHiMaD_benchmark3/: customPDE.h  equations.cc  main.cc  postprocess.cc
applications/CHiMaD_benchmark6a/: customPDE.h  equations.cc
applications/CHiMaD_benchmark6b/: customPDE.h  equations.cc  main.cc  postprocess.cc
applications/CHiMaD_benchmark7/: customPDE.h  equations.cc  postprocess.cc
applications/Kovasznay_flow/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/MgNd_precipitate_single_Bppp/: customPDE.h  equations.cc  postprocess.cc
applications/NSE/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_IA/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_PSPG/: customPDE.h  equations.cc  parameters.prm
applications/NSE_PSPG_SUPG/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_PSPG_SUPG_taylor_green_vortex/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_PSPG_taylor_green_vortex/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_Particle/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm
applications/NSE_SBM/: ICs_and_BCs.cc  customPDE.h  equations.cc  p2d.prm  parameters.prm  parameters_2D.prm
applications/NavierStokes/: ICs_and_BCs.cc  customPDE.h  equations.cc  param2D.prm  parameters.prm  parameters_2D.prm  postprocess.cc
applications/PureMeltConvection/: ICs_and_BCs.cc  customPDE.h  equations.cc  parameters.prm  postprocess.cc
applications/_nucleating_precipitates_MgRE/: customPDE.h  equations.h  main.cc  postprocess.h
cmake/: setup_application.cmake
include/: AdaptiveRefinement.h  EquationDependencyParser.h  FloodFiller.h  OrderParameterRemapper.h  adaptiveRefinement.h  boundaryConditions.h  checkpoint.h  discretization.h  fields.h  initialConditions.h  inputFileReader.h  matrixFreePDE.h  model_variables.h  nonUniformDirichletBC.h  problemFlags.h  sortIndexEntryPairList.h  timeStepping.h  typeDefs.h  userInputParameters.h  varTypeEnums.h  variableAttributeLoader.h  variableContainer.h
src/core/: problem.cc  (+3 more)
tests/automatic_tests/allen_cahn_explicit/: CMakeLists.txt  custom_pde.h
tests/unit_tests/: CMakeLists.txt  main.cc  test_FloodFiller.h  test_LinearSolverParameters.h  test_NonlinearSolverParameters.h  test_OrderParameterRemapper.h  test_SimplifiedGrainManipulator.h  test_SimplifiedGrainRepresentation.h  test_invM.h  test_setOutputTimeSteps.h  test_setRigidBodyModeConstraints.h  unitTest.h  unit_test_inputs.cc
(+202 files in other folders)
